@@ -48,3 +48,4 @@
 [2025-04-12 09:49:03]	No se encontró una version válida	Navbar superior de calc refactorizado
 [2025-04-12 10:58:57]	No se encontró una version válida	Vista Cart (unestable)
 [2025-04-12 13:49:47]	No se encontró una version válida	New assets
+[2025-04-12 13:51:52]	No se encontró una version válida	CartItem .kt
